--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "url": "git+https://github.com/ezesundayeze/hek.git"
   },
   "keywords": [
-    "payment",
-    "escrow"
+    "Footwear",
+    "marketplace"
   ],
   "author": "Guardedpay Team (Arthur, Eze)",
   "license": "ISC",
@@ -37,6 +37,7 @@
     "joi": "^17.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
+    "mongoose-paginate-v2": "^1.3.10",
     "mongoose-seed": "^0.6.0",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
