--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^5.10.5",
     "mongoose-paginate-v2": "^1.3.10",
     "mongoose-seed": "^0.6.0",
+    "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.4.11",
