--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
-    "handlebars": "^4.7.6",
     "jest": "^26.4.2",
     "joi": "^17.2.0",
     "jsonwebtoken": "^8.5.1",
@@ -51,5 +50,8 @@
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ]
+  },
+  "devDependencies": {
+    "handlebars": "4.5.3"
   }
 }
